assets/sass/booking.scss
.o-booking__header-content {
  display: grid;
  grid-template-columns: 1.5fr 1fr 1fr;
  gap: 2rem;
  width: 100%;

  &:not(:has(.o-booking__classes)) {
    grid-template-columns: 1.5fr 2fr;
    margin-right: 2rem;
  }

  @media screen and (max-width: #{$breakpoint-md}) {
    display: flex;
    flex-direction: column;
    gap: 1rem;
  }
}

.o-booking__header {
  display: flex;
  justify-content: space-between;
  gap: 2rem;
  width: 100%;
  align-items: center;
}

.o-booking__classes {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  text-align: center;
  > p {
    margin-bottom: 0rem;
  }

  @media (max-width: #{$breakpoint-md}) {
    align-items: flex-start;

    &:empty {
      display: none;
    }
  }
}

.o-booking__classes-title {
  font-size: 1.6rem;
  font-style: italic;
}

.o-booking__title-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 0.4rem;
}

.o-booking__title {
  display: flex;
  gap: 0.4rem;
  align-items: center;
  font-weight: 600;
}

.o-booking__title-text {
  line-height: 1.1;
}

.o-booking__subtitle {
  font-weight: 400;
  font-style: italic;
  font-size: 1.4rem;
}

.o-booking__meta {
  display: flex;
  flex-direction: column;
  justify-content: center;

  @media (max-width: #{$breakpoint-md}) {
    align-items: flex-start;

    &:empty {
      display: none;
    }
  }

  &-item {
    display: flex;
    align-items: center;
    gap: 0.4rem;

    &--success {
      color: var(--color-success);
    }

    &--error {
      color: var(--color-error);
    }
  }
}

.o-booking__links {
  margin-top: 1.5rem;
  display: flex;
  gap: 1rem;
  flex-wrap: wrap;

  @media print {
    > a {
      flex-wrap: wrap;
      font-weight: bold;

      &::after {
        font-weight: normal;
      }
    }
  }
  > a {
    @media print {
      flex-wrap: wrap;
      font-weight: bold;
    }
  }
}

.o-booking__info {
  margin-bottom: 1.5rem;
}

